modules and entities added

--- a/SchoolRegister/src/main/resources/messages_en.properties
+++ b/SchoolRegister/src/main/resources/messages_en.properties
@@ -10,3 +10,51 @@ info_header_phone=Phone Number
 info_header_number=(0423) 22 34 987
 info_header_mail=Email
 info_header_main_text=universityanonymous@mail.com
+
+#----------------------------------------------------------------------
+admin_title=Dashboard
+admin_nav_home=Home
+admin_nav_students=Students
+admin_nav_teachers=Teachers
+admin_nav_users=Users
+admin_nav_careers=Careers
+admin_nav_admins=Admins
+admin_nav_me=Me
+admin_nav_me_change=Change Languages
+admin_nav_me_change_select=Change
+admin_nav_me_logout=Logout
+admin_nav_vertical_index=Index
+admin_nav_vertical_students=Add Student
+admin_nav_vertical_teachers=Add Teacher
+admin_nav_vertical_courses=Add Course
+admin_nav_vertical_admins=Add Admin
+admin_nav_vertical_careers=Add Career
+
+#---------------- forms --------------------------------------------------
+form_name=Name
+form_dna=Dna
+form_phone=Phone
+form_email=Email
+form_career=Career
+form_level=Level
+form_status=Status
+form_status_select=Select
+form_status_on=On
+form_status_off=Off
+form_add=Save
+form_reset=Clear
+form_address=Address
+form_teacher=Teacher
+form_duration=Duration
+form_courses=Courses
+
+#--------- validations messages ------------------------------------------------
+jakarta.validation.constraints.NotBlank.message=there has to be a value
+jakarta.validation.constraints.Size.message=size incorrect
+jakarta.validation.constraints.Email.message=the value has to be a valid email
+jakarta.validation.constraints.Min.message=introduce a valid range
+jakarta.validation.constraints.Max.message=introduce a valid range
+
+#-------------- general messages ----------------------------------------------
+success_register=Register Inserted Successfully
+error_insertion=Error on any field, some fields are unique
