--- a/SchoolRegister/src/main/resources/messages_es.properties
+++ b/SchoolRegister/src/main/resources/messages_es.properties
@@ -11,3 +11,51 @@ info_header_phone=Numero de Telefono
 info_header_number=(0423) 22 34 987
 info_header_mail=Correo
 info_header_main_text=universityanonymous@mail.com
+
+#----------------------------------------------------------------------
+admin_title=Administrador
+admin_nav_home=Inicio
+admin_nav_students=Estudiantes
+admin_nav_teachers=Profesores
+admin_nav_users=Usuarios
+admin_nav_careers=Carreras
+admin_nav_admins=Administradores
+admin_nav_me=Yo
+admin_nav_me_change=Cambiar Idiomas
+admin_nav_me_change_select=Cambiar
+admin_nav_me_logout=Salir
+admin_nav_vertical_index=Inicio
+admin_nav_vertical_students=Incribir Estudiantes
+admin_nav_vertical_teachers=Insertar Profesor
+admin_nav_vertical_courses=Insertar Materia
+admin_nav_vertical_admins=Insertar Administrador
+admin_nav_vertical_careers=Insertar Carrera
+
+#---------------- forms --------------------------------------------------
+form_name=Nombre
+form_dna=Cédula
+form_phone=Telf.
+form_email=Correo
+form_career=Carrera
+form_level=Semestre
+form_status=Estado
+form_status_select=Seleccionar
+form_status_on=Activo
+form_status_off=Inactivo
+form_add=Guardar
+form_reset=Limpiar
+form_address=Dirección
+form_teacher=Profesor
+form_duration=Duración
+form_courses=Cursos
+
+#--------- validations messages ------------------------------------------------
+jakarta.validation.constraints.NotBlank.message=el campo no puede estar vacio
+jakarta.validation.constraints.Size.message=el tamaño del valor es incorrecto
+jakarta.validation.constraints.Email.message=tiene que ser un email valido
+jakarta.validation.constraints.Min.message=introduzca un rango valido
+jakarta.validation.constraints.Max.message=introduzca un rango valido
+
+#---------------- general messages -------------------------------------------
+success_register=Registro Insertado Correctamente
+error_insertion=Error en algun campo, algunos son tienen que ser unicos
