--- a/SchoolRegister/src/main/resources/messages.properties
+++ b/SchoolRegister/src/main/resources/messages.properties
@@ -43,10 +43,14 @@ form_status_on=On
 form_status_off=Off
 form_add=Save
 form_reset=Clear
+form_edit=Edit
+form_filter=Filter
 form_address=Address
 form_teacher=Teacher
 form_duration=Duration
 form_courses=Courses
+modal_details=Details
+modal_founded=Founded
 
 #--------- validations messages ------------------------------------------------
 jakarta.validation.constraints.NotBlank.message=there has to be a value
@@ -58,4 +62,9 @@ jakarta.validation.constraints.Max.message=introduce a valid range
 #------------ general messages -------------------------------------------------
 success_register=Register Inserted Successfully
 error_insertion=Error on any field, some fields are unique
+success_deleted=Deleted successfully
+success_updated=Updated successfully
+error_deleted=Error! It must have been an error in id or filter param
+error_updated=Error updating entity, something went wrong
+error_filter=Something went wrong, please check out
 
