--- a/SchoolRegister/src/main/resources/messages_es.properties
+++ b/SchoolRegister/src/main/resources/messages_es.properties
@@ -44,10 +44,14 @@ form_status_on=Activo
 form_status_off=Inactivo
 form_add=Guardar
 form_reset=Limpiar
+form_edit=Editar
+form_filter=Filtrar
 form_address=Dirección
 form_teacher=Profesor
 form_duration=Duración
 form_courses=Cursos
+modal_details=Detalles
+modal_founded=Encontrados
 
 #--------- validations messages ------------------------------------------------
 jakarta.validation.constraints.NotBlank.message=el campo no puede estar vacio
@@ -59,3 +63,8 @@ jakarta.validation.constraints.Max.message=introduzca un rango valido
 #---------------- general messages -------------------------------------------
 success_register=Registro Insertado Correctamente
 error_insertion=Error en algun campo, algunos son tienen que ser unicos
+success_deleted=Eliminado exitosamente
+success_updated=Actualizado exitosamente
+error_deleted=Error! Debio ser en el id o en el parametro
+error_updated=Error actualizando la entidad, algo salio mal
+error_filter=Algo salio mal, por favor verifica los datos
