--- a/SchoolRegister/src/main/resources/messages.properties
+++ b/SchoolRegister/src/main/resources/messages.properties
@@ -49,6 +49,7 @@ form_address=Address
 form_teacher=Teacher
 form_duration=Duration
 form_courses=Courses
+form_courses_assignment=Assigned Courses (Click to delete)
 modal_details=Details
 modal_founded=Founded
 
