--- a/SchoolRegister/src/main/resources/messages_es.properties
+++ b/SchoolRegister/src/main/resources/messages_es.properties
@@ -50,6 +50,7 @@ form_address=Dirección
 form_teacher=Profesor
 form_duration=Duración
 form_courses=Cursos
+form_courses_assignment=Cursos Asignados (Click para eliminar)
 modal_details=Detalles
 modal_founded=Encontrados
 
