--- a/SchoolRegister/src/main/resources/messages_es.properties
+++ b/SchoolRegister/src/main/resources/messages_es.properties
@@ -33,6 +33,8 @@ admin_nav_vertical_careers=Insertar Carrera
 
 #---------------- forms --------------------------------------------------
 form_name=Nombre
+form_username=Usuario
+form_role=Rol
 form_dna=Cédula
 form_phone=Telf.
 form_email=Correo
