--- a/SchoolRegister/src/main/resources/messages_en.properties
+++ b/SchoolRegister/src/main/resources/messages_en.properties
@@ -32,6 +32,8 @@ admin_nav_vertical_careers=Add Career
 
 #---------------- forms --------------------------------------------------
 form_name=Name
+form_username=Username
+form_role=Role
 form_dna=Dna
 form_phone=Phone
 form_email=Email
